added contact page

--- a/about.html
+++ b/about.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum officia aliquam vitae nam vel omnis, dolorum, atque libero ab deleniti repudiandae ea eum non odio mollitia quos excepturi, odit obcaecati!</h1>
+    <P>hello</P>
+
 </body>
 </html>
